--- a/index.html
+++ b/index.html
@@ -18,12 +18,9 @@
         html,
         body {
             position: relative;
-            height: 100%;
-
             padding: 0;
-
             margin: 0;
-            background-color: aliceblue;
+            background-color: pink;
         }
 
         canvas {
@@ -37,16 +34,6 @@
             height: 100%;
 
         }
-
-        #x {
-            position: absolute;
-            font-weight: 900;
-            font-size: 35px;
-            font-family: '宋体';
-            margin-top: 290;
-            margin-left: 510;
-
-        }
     </style>
 
 </HEAD>
@@ -56,7 +43,6 @@
 
     </style>
 
-    <div id="x">小仙女<br>&ensp;smile</div>
     <canvas id="pinkboard"></canvas>
 
     <script>
